css/styles.css
.hidden {
    display: none;
}

:root {
    --iris: #4d5ae5;
    --ocean: #404bbf;
    --navy-blue: #2e2f42;
    --green: #31d0aa;
    --slate: #434455;
    --light-slate: #8e8f99;
    --cornflower: #e7e9fc;
    --cloud: #f4f4fd;
    --navy-blue-modal: rgba(46, 47, 66, 0.4);
    --grey: rgba(46, 47, 66, 0.7);
    --white: #fff;
    --dairy: #fcfcfc;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

button {
    cursor: pointer;
}

img {
    display: block;
    max-width: 100%;
    height: auto;
}

a {
    text-decoration: none;
}

body {
    font-family: Roboto, sans-serif;
    font-size: 16px;
    color: var(--slate);
    background-color: var(--white);
    font-weight: 400;
}

.visually-hidden {
    position: absolute;
    width: 1px;
    height: 1px;
    margin: -1px;
    border: 0;
    padding: 0;
    white-space: nowrap;
    clip-path: inset(100%);
    clip: rect(0 0 0 0);
    overflow: hidden;
}

/* Common */

.container {
    max-width: 320px;
    padding: 0 16px;
    margin: 0 auto;
}

@media screen and (min-width: 768px) {
    .container {
        max-width: 768px;
        padding: 0 24px;
    }
}

@media screen and (min-width: 1158px) {
    .container {
        max-width: 1158px;
        padding: 0 15px;
        }
}

/* header */

.header {
    padding: 16px 0;
    border-bottom: 1px solid var(--cornflower);
    align-items: center;
    box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
    background: var(--white);
}

.header .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.nav-list,
.contacts {
    display: none;
}

.header-logo,
.header-logo-web {
    font-family: "Raleway", sans-serif;
    font-weight: 700;
    font-size: 18px;
    line-height: 1.16;
    letter-spacing: 0.03em;
    text-transform: uppercase;
    padding: 16px 0;
}

.header-logo {
    color: var(--navy-blue);
    display: block;
}


.header-logo-web {
    color: var(--iris);
}

.burger-btn {
    padding: 0;
    border: none;
    background-color: transparent;
}

.burger-icon {
    display: block;
    fill: #2f2f37;;
}

@media screen and (min-width: 768px) {
    .burger-btn {
        display: none;
    }
    .nav-list {
        display: flex;
        gap: 40px;
        align-items: center;
    }
    .contacts {
        font-style: normal;         
        display: block;
    }

    .header {
        height: 72px;
        padding: 0;
        border-bottom: 1px solid var(--cornflower);
        box-shadow: 0 1px 6px rgba(46, 47, 66, 0.08);
        background: var(--white);
    }

    .header .container {
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: space-between;
        }
    .header-logo,
    .header-logo-web {
        font-family: "Raleway", sans-serif;
        font-weight: 700;
        font-size: 18px;
        line-height: 1.16;
        letter-spacing: 0.03em;
        text-transform: uppercase;
        }

    .nav {
        margin-left: 120px;
    }

    .nav-link {
        font-weight: 500;
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        color: var(--navy-blue);
        display: block;
        padding-top: 24px;
        padding-bottom: 24px;
        position: relative;

        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }

    .nav-link.active {
        color: var(--ocean);
    }

    .nav-link.active::after {
        content: "";
        position: absolute;
        left: 0;
        bottom: -1px;
        width: 100%;
        height: 4px;
        background-color: var(--ocean);
        border-radius: 2px;
    }
    
    .nav-list {
        display: flex;
        gap: 40px;
    }
    
    .nav-link:hover,
    .nav-link:focus {
        color: var(--ocean);
    }
    
    .contacts {
        margin-left: auto;
    }

    .contacts-link {
        font-weight: 400;
        font-size: 12px;
        line-height: 1.17;
        letter-spacing: 0.04em;
        color: var(--slate);
        font-style: normal;
        display: block;
        transition-property: color;
        transition-duration: 250ms;
        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    }

    .contacts-link:hover,
    .contacts-link:focus {
        color: var(--ocean);
    }

    .contacts ul {
        display: flex;
        flex-direction: column;
        gap: 12px;
    }
}

@media screen and (min-width: 1158px) {

    .nav {
        margin-left: 76px;
        }

    .contacts ul {
        flex-direction: row;
        gap: 12px;
    }
    .contacts-link {
        font-weight: 400;
        font-size: 16px;
        line-height: 1.5;
        letter-spacing: 0.02em;
        font-style: normal;
        padding-top: 24px;
        padding-bottom: 24px;
    
    }
}

/* hero */

.hero {
    background-color: var(--navy-blue);
    background-image:
        linear-gradient(var(--grey), var(--grey)),
        url("../images/people-office-bg.jpg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;

    padding: 72px 0;
    text-align: center;
}

@media (min-resolution: 192dpi) {
    .hero {
        background-image:
            linear-gradient(var(--grey), var(--grey)),
            url("../images/people-office-bg@2x.jpg");
    }
}

.hero-title {
    font-weight: 700;
    font-size: 36px;
    line-height: 1.11;
    letter-spacing: 0.02em;
    color: var(--white);

    max-width: 216px;
    margin: 0 auto 72px;
}

.hero-btn {
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.04em;

    padding: 16px 32px;
    border-radius: 4px;
    border: none;

    background-color: var(--iris);
    color: var(--white);

    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.15);
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
/* ... */

